# backend

./: .env  .flaskenv  Dockerfile  README.md  backend.dockerfile  docker-compose.override.yml  docker-compose.yml  gunicorn_conf.py  pip-requirements.txt  pyproject.toml  requirements.txt  setup.py  test.py  theroast.yaml  tmp-req.txt
backend/: .env  backend.dockerfile  pip-requirements.txt  requirements.txt  requirements.yml  theroast.yaml
backend/alembic/: env.py
backend/alembic/versions/: 9c757d500529_initial_migration_from_flask_sqlalchemy.py
backend/migrations/versions/: 4ef2163d3a0a_.py
backend/theroast/: .env  config.py
backend/theroast/app/: deps.py  main.py
frontend/: .env  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.css  App.js  Config.js  index.css
migrations/versions/: 0c88dcee944d_.py  2c74cf48b79c_.py  45a552e007e3_.py  a8e58657a6e0_.py  b1d6221773ff_.py  cc70432b1d34_.py  d802c5659583_.py  e77b1f6e7986_.py
scripts/: start-reload.sh  start.sh
theroast/: __init__.py  app.py  backend_pre_start.py  celery_app.py  config.py  extensions.py  initial_data.py  mail.py  prestart.sh
theroast.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
theroast/alembic/: env.py
theroast/api/v1/: auth.py  (+1 more)
theroast/app/: deps.py  main.py  utils.py
theroast/celery/: __init__.py  app.py  worker.py
theroast/celery_app/: __init__.py
theroast/core/: email.py  security.py
theroast/data/: __init__.py  news.py
theroast/db/: base_class.py  init_db.py  session.py
theroast/tasks/: email.py  example.py  newsletter.py
(+154 files in other folders)
